# pandapower-viz

./: .gitignore  .releaserc.json  CONTRIBUTING.md  LICENSE  Makefile  README.md  pyproject.toml
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml  deploy-pages.yml  pr-review.yml  release.yml
frontend/: index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts
frontend/src/: index.ts  widget-entry.ts
frontend/src/components/: NetworkDiagram.tsx  NetworkMap.tsx
frontend/src/core/: colors.ts  layout.ts  parser.ts  symbols.ts  types.ts
frontend/src/standalone/: App.tsx  WelcomeScreen.tsx  main.tsx  samples.ts
frontend/src/standalone/data/: ieee14.json  ieee30.json  sample_network.json
frontend/src/styles/: network-diagram.css  network-map.css  variables.css
frontend/tests/unit/: layout.test.ts  parser.test.ts
frontend/tests/unit/components/: NetworkDiagram.test.tsx
pandapower_viz/: __init__.py  adapter.py  api.py  server.py  widget.py
tests/: test_widget.py
