[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build]
# Include _static/ even though it's gitignored (built frontend assets)
ignore-vcs = true
exclude = [
  "frontend/node_modules",
  "frontend/dist",
  "frontend/tests",
  "tests",
  ".github",
]

[tool.hatch.build.targets.wheel]
packages = ["pandapower_viz"]

[project]
name = "pandapower-viz"
version = "0.1.0"
description = "Interactive web visualizer for pandapower networks"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.9"
dependencies = [
    "fastapi>=0.100.0",
    "uvicorn[standard]>=0.20.0",
    "pandapower>=2.13.0",
    "anywidget>=0.9.0",
    "traitlets>=5.0.0",
]
keywords = ["pandapower", "power-system", "visualization", "electrical-grid"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Topic :: Scientific/Engineering",
    "Framework :: FastAPI",
    "License :: OSI Approved :: MIT License",
]

[project.urls]
Homepage = "https://github.com/matheusduartedm/pandapower-viz"
